syntax = "proto3";

option csharp_namespace = "Discount.GRPC.Protos";

service DiscountService {
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
	string couponCode = 1;
	string productId = 2;
}

message CouponModel{
	int32 id = 1;
	string productId = 2;
	string description = 3;
	int64 amount_scaled = 4; // decimal is not supported in proto3 so we scaled up to the cents
	string couponCode = 5;
}

message CreateDiscountRequest{
	CouponModel coupon = 1;
}

message UpdateDiscountRequest{
	CouponModel coupon = 1;
}

message DeleteDiscountRequest{
	string couponCode = 1;
	string productId = 2;
}

message DeleteDiscountResponse{
	bool success = 1;
}